# IronTrack

./: .dockerignore  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  MIGRATION_PLAN.md  Makefile  TODO.md  compose.yaml  index.html  package-lock.json  package.json  types.ts
backend/: drizzle.config.ts  irontrack.db-shm  irontrack.db-wal  package.json
backend/src/: app.ts  auth.ts  index.ts  types.ts
backend/test/: auth.test.ts  exercises.test.ts  helpers.ts  instances.test.ts  sync.test.ts  templates.test.ts
components/: Layout.tsx
frontend/: App.tsx  index.css  index.html  index.tsx  package-lock.json  package.json  playwright.config.ts  tsconfig.json  types.ts  vite.config.ts
frontend/components/: Layout.tsx  NumericInput.tsx  SyncIndicator.tsx
frontend/e2e/: auth.spec.ts  pwa.spec.ts  sync.spec.ts  workout-discard.spec.ts  workout-flow.spec.ts
frontend/hooks/: useInstallPrompt.ts
frontend/pages/: Auth.tsx  History.tsx  Home.tsx  InstanceDetail.tsx  TemplateEditor.tsx  Templates.tsx  WorkoutSession.tsx
frontend/services/: db.ts  localDb.ts  sync.ts  syncStore.ts
frontend/test-results/: .last-run.json
irontrack/: .gitignore  IMPORTS.md  __init__.py  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
irontrack/routers/: auth.py  exercises.py  instances.py  templates.py
irontrack/tests/: conftest.py  test_auth.py  test_exercises.py  test_instances.py  test_templates.py
pages/: History.tsx  Home.tsx  TemplateEditor.tsx  WorkoutSession.tsx
services/: db.ts
(+8 files in other folders)
